# PAOOtema2

tema2/: CMakeLists.txt
tema2/inc/: Inventory.h  Logger.h  Produs.h
tema2/script/: run.sh
tema2/src/: Inventory.cpp  Logger.cpp  Produs.cpp  main.cpp
